# sonady

./: README.md  __init__.py  main.py  note  pyproject.toml  sona.py
src/: __init__.py  sonady.py
